--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 <body>
   
 </body>
-<footer>Coded by Svetlanka</footer>
+<footer>Coded by <a href="https://github.com/svetlanabog188419" target = "_blank">Svetlanka</a> , code hosted on <a href ="https://github.com/svetlanabog188419/Svetlana-s-Repositorij" target = "_blank"> Github</a> and site hosted on <a href="https://cozy-weather-svetlana.netlify.app/" target="_blank"> Netlify</a> </footer>
 </html>
